...
import MaterialIcons from 'react-native-vector-icons/MaterialIcons';
import SearchBar from '../utilities/SearchBar.js';
import SearchResults from '../utilities/SearchResults.js';


const MapScreen = ({route}) => {
  const [campus, setCampus] = useState('SGW');
  const [zoomLevel, setZoomLevel] = useState(0.005); 
  const [selectedBuilding, setSelectedBuilding] = useState(null); 
  const mapRef = useRef(null);
  const [selectedMarker, setSelectedMarker] = useState(null);
  const [selectedPOI, setSelectedPOI] = useState(null);
  const [showDirections, setShowDirections] = useState(false);
...
    <View style={styles.container}>
      {currentScreen === 'Map' ? (
        <View style={styles.searchBarContainer}>
          <GooglePlacesAutocomplete
          ref={poiSearchRef}
            fetchDetails={true}
            placeholder="Search for Point of Interest..."
            styles={{
              textInput: styles.searchBar,
            }}
            query={{
              key: API_KEY,
              language: 'en',
...
      shadowOpacity: 0.2,
      shadowRadius: 4,
    }}
  >
    {[
      { label: 'Coffee Shops', value: 'cafe', icon: 'local-cafe' },
      { label: 'Restaurants', value: 'restaurant', icon: 'restaurant' },
      { label: 'Clothing Stores', value: 'clothing_store', icon: 'store' },
    ].map((cat) => (
      <TouchableOpacity
        key={cat.value}
        onPress={() => {
          setShowCategoryPicker(false);
...
                  setShowPOIdirections(true);
                }
              }}
              style={showPOIdirections ? styles.startPOIbuttonActive : styles.startPOIbutton}
             >
              <Text style={showPOIdirections ?  styles.highlightedText : styles.normalText }>
              {showPOIdirections ? 'Cancel' : 'Start'}
              </Text>
           </TouchableOpacity>
        )}
        </View>
      ) : (
        <>
...
              <Text style={activeButton === 'Loyola' ? styles.highlightedText : styles.normalText}>LOY</Text>
            </TouchableOpacity>
            
            <TouchableOpacity
              style={activeButton === 'user' ? styles.userLocationButtonActive : styles.userLocationButton}
              onPress={handleUserLocation}
              testID="userLocationButton"
            >
              <Icon name="user" size={20} color={activeButton === 'user' ? 'blue' : 'white'} />
            </TouchableOpacity>
            
            {activeButton !== 'user' && (
              <TouchableOpacity 
...
        <Marker coordinate={location} title={location.title} description={location.description} />
        <Marker coordinate={destinationLocation} title={destinationLocation.title} description={destinationLocation.description} />

     {selectedPOI && (
       <Marker
        coordinate={selectedPOI}
        title="Selected POI"
        description="This is your selected point of interest."
        pinColor="blue" 
      />
    )}

{nearbyPlaces.map((place, index) => (
...
