...
              apikey={API_KEY}
              strokeWidth={5}
              strokeColor="blue"  // Driving mode is always blue
              mode={mode}
            />
             <Marker
                              testID={`driving-line`}
                              zIndex={10}
                              coordinate={location}
                            >
                              <Text note style={{ color: "#800000", fontSize: 10 }}>
                              </Text>
                            </Marker>
...
              strokeWidth={1}
              strokeColor="blue"
              mode={mode}
              lineDashPattern={[5, 5]}  // Small dots (short lines with large gaps)
          />
          <Marker
                  testID={`walking-line`}
                  zIndex={10}
                  coordinate={location}
                >
                  <Text note style={{ color: "#800000", fontSize: 10 }}>
                  </Text>
                </Marker>
...
              apikey={API_KEY}
              strokeWidth={5}
              strokeColor="green"  // Change color for transit mode
              mode="TRANSIT"
            />
<Marker
                              testID={`transit-line`}
                              zIndex={10}
                              coordinate={location}
                            >
                              <Text note style={{ color: "#800000", fontSize: 10 }}>
                              </Text>
                </Marker>
...
          )}
        </>
      )}
      {showDirections && (
        <View style={style.modeContainer}>
          <TouchableOpacity 
            testID="driving-button"
            onPress={() => setMode('DRIVING')} 
            style={[styles.modeButton, mode === 'DRIVING' && { backgroundColor: 'blue' }]}>
            <Text style={styles.modeText}>Driving</Text>
          </TouchableOpacity>

          <TouchableOpacity
            testID="walking-button"
            onPress={() => setMode('WALKING')} 
            style={[styles.modeButton, mode === 'WALKING' && { backgroundColor: 'blue' }]}>
            <Text style={styles.modeText}>Walking</Text>
          </TouchableOpacity>

          <TouchableOpacity 
            testID="transit-button"
            onPress={() => setMode('TRANSIT')} 
            style={[styles.modeButton, mode === 'TRANSIT' && { backgroundColor: 'green' }]}>
            <Text style={styles.modeText}>Transit</Text>
          </TouchableOpacity>
        </View>
      )}
    </View>
  );

...
