...
import indoorFloorData from './indoorFloorCoordinates.js';
import {findShortestPath} from './IndoorFloorShortestPathAlgo.js';
import FloorButtons from './FloorButtons.js';
import DirectionsTransitScreen from './DirectionsTransitScreen.js';

const TempMap = () => {
    const [campus, setCampus] = useState('SGW');
    const [zoomLevel, setZoomLevel] = useState(0.005);
    const mapRef = useRef(null);
    const [userLocation, setUserLocation] = useState(null);
    const [centerOnUserLocation, setCenterOnUserLocation] = useState(true);
    const [isUserLocationFetched, setIsUserLocationFetched] = useState(false);
    const [activeButton, setActiveButton] = useState('SGW');
...
                longitudeDelta: zoomLevel,
            }, 1000);
        }
    }, [campus, zoomLevel]);

    useEffect(() => {
        return () => {
            if (pathUpdateInterval.current) {
                clearInterval(pathUpdateInterval.current);
            }
        };
    }, []);

...
                      <View style={style.iconDot} />
                      <View style={style.iconDots} />
                  </View>
                  <View style={style.textInputWrapper}>
                      <TextInput
                          style={style.input}
                          placeholder="Choose starting class"
                          value={searchStartingText}
                          onFocus={() => setIsSelectingStart(true)}
                          onChangeText={(text) => handleSearch(text, true)}
                      />
                      {searchStartingText.length > 0 && (
                          <TouchableOpacity testID = "close-start"onPress={() => {setSearchStartingText(''), setStartLocation(''), onPressClearPath()}}>
                              <Icon name="times-circle" size={18} color="gray" />
                          </TouchableOpacity>
                      )}
                  </View>
                </View>

...
                    <View style={style.iconContainer}>
                        <Icon name="map-marker" size={20} color="red" />
                    </View>
                    <View style={style.textInputWrapper}>
                        <TextInput
                            style={style.input}
                            placeholder="Choose destination"
                            value={searchDestinationText}
                            onFocus={() => setIsSelectingStart(false)}
                            onChangeText={(text) => handleSearch(text, false)}
                        />
                        {searchDestinationText.length > 0 && (
                            <TouchableOpacity testID = "close-dest"onPress={() => {setSearchDestinationText(''), setDestinationLocation(''), onPressClearPath()}}>
                                <Icon name="times-circle" size={18} color="gray" />
                            </TouchableOpacity>
                        )}
                    </View>
                </View>
                
...
                    maxHeight={115}
                  />
                )}
                    
                    {startLocation && destinationLocation && !showPath && (
                      <TouchableOpacity style={style.pathButton} onPress={onPressShowPath}>
                      <Text style={style.pathButtonText}>Show Directions</Text>
                      </TouchableOpacity>)
                    }

                  <View style={style.toggleButtonContainer}>
                                    <TouchableOpacity
                                    style={activeButton === 'SGW' ? styles.sgwButtonActive : styles.sgwButton}
...
                                  </TouchableOpacity>
                                  <TouchableOpacity
                            style={activeButton === 'Loyola' ? styles.loyolaButtonActive : styles.loyolaButton}
                            onPress={handleSelectLoyola}
                            testID="loyolaButton"
                          >
                            <Text style={activeButton === 'Loyola' ? styles.highlightedText : styles.normalText}>LOY</Text>
                          </TouchableOpacity>

                          {showPath && (
                          <TouchableOpacity
                            style={{
                              backgroundColor: wheelChairToggle ? 'green' : '#800000',
...
                              borderColor: 'black',
                              marginRight: 5
                            }}
                            onPress={() => {
                              setWheelChairToggle(prev => !prev);
                            }}
                            testID="wheelChairIcon"
                          >
                            <Icon name="wheelchair" size={22} color="white" />
                          </TouchableOpacity>
                        )}

                  </View>
...
